# stringified

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  stringified.hh
test/: test.cc
